Optimized by relpacing AList with LList